--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Toggler Button CSS -->
-    <link rel="stylesheet" href="../css/toggler.css">
+    <link rel="stylesheet" href="assets/css/toggler.css">
     <!-- Hardcoded CSS -->
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 
     <!-- Loader CSS -->
-    <link rel="stylesheet" href="../css/loader.css">
+    <link rel="stylesheet" href="assets/css/loader.css">
 </head>
 <body class="no-scroll-preload">
 
