--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
 
 
     <!-- Laoder Script -->
-    <script src="./assets/js/loader.js"></script>
+    <script src="assets/js/loader.js"></script>
 
     <!-- Particles Script -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
-    <script src="../assets/js/particles.js"></script>
+    <script src="assets/js/particles.js"></script>
 
     <!-- Javascript part -->
-    <script src="../assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
     
     <!-- Bootstrap script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -143,7 +143,7 @@
 
     <!-- Typed script -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="../assets/js/Typed.js"></script>
+    <script src="assets/js/Typed.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 </body>
 </html>
