commit due to changes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="right_container">
             <div class="header_image">
-                <img src="../assets/images/backgroundimg.png" name="slide" alt="">
+                <img src="assets/images/backgroundimg.png" name="slide" alt="">
             </div>
         </div>
     </div>
